--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <button class="button" href="#">Buy Now</button>
             <div class="burger">
-                <img class="burger__icon" src="src/img/sandwich.png">
+                <img class="burger__icon" src="dist/img/sandwich.png">
                 <i class='fas fa-times'></i>
              </div>
             
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <img class="picture__code" src="./src/img/window.png" alt="window" class="get-it">
+            <img class="picture__code" src="dist/img/window.png" alt="window" class="get-it">
 
         </div>
     </section>
@@ -157,11 +157,11 @@
         <div class="container slider-container">
             <div class="slider-box">
                 <div class="button_left">
-                    <img src="./src/img/ArrowL.png"></div>
+                    <img src="dist/img/ArrowL.png"></div>
                 <ul class="slider">
                     <li class="slider-page first">
                         <div class="author">
-                            <img class="author__foto" src="./src/img/userpic.png">
+                            <img class="author__foto" src="dist/img/userpic.png">
                             <div class="author-info ">
                                 <div class="author-info__name">Steven Strange</div>
                                 <div class="author-info__skill">@DoctorS</div>
@@ -178,7 +178,7 @@
                     </li>
                     <li class="slider-page">
                         <div class="author">
-                            <img class="author__foto" src="./src/img/userpic4.png">
+                            <img class="author__foto" src="dist/img/userpic4.png">
                             <div class="author-info ">
                                 <div class="author-info__name"> Elizabeth Anne</div>
                                 <div class="author-info__skill">@Designer</div>
@@ -195,7 +195,7 @@
                     </li>
                     <li class="slider-page">
                         <div class="author">
-                            <img class="author__foto" src="./src/img/userpic1.png">
+                            <img class="author__foto" src="dist/img/userpic1.png">
                             <div class="author-info ">
                                 <div class="author-info__name">Nikola Tesla</div>
                                 <div class="author-info__skill">@Scientist</div>
@@ -213,7 +213,7 @@
                     </li>
                     <li class="slider-page">
                         <div class="author">
-                            <img class="author__foto" src="./src/img/userpic3.png">
+                            <img class="author__foto" src="dist/img/userpic3.png">
                             <div class="author-info ">
                                 <div class="author-info__name">Robinson Crusoe</div>
                                 <div class="author-info__skill">@Freelancer</div>
@@ -230,7 +230,7 @@
                     </li>
                     <li class="slider-page">
                         <div class="author">
-                            <img class="author__foto" src="./src/img/userpic2.png">
+                            <img class="author__foto" src="dist/img/userpic2.png">
                             <div class="author-info ">
                                 <div class="author-info__name">Bartolomeu Dias</div>
                                 <div class="author-info__skill">@Captain</div>
@@ -247,7 +247,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="button_right"><img src="./src/img/ArrowR.png"></div>
+                <div class="button_right"><img src="dist/img/ArrowR.png"></div>
             </div>
             <div class="social-button">
                 <div class="button-box">
